# keepcontext-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  KEEPCONTEXT-AI.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-dev.yml  ci.yml
deploy/aws/: .env.ec2  DEPLOY_AWS_FREE_TIER.md  docker-compose.free.yml  ec2-bootstrap.sh
docs/: FUTURE_VISION.md  LAUNCH_REPORT_2026-03-19.md  LAUNCH_REPO_LINK_GUIDE.md  PRODUCTION_GO_LIVE_CHECKLIST.md  README.md  README_LAUNCH_TEMPLATE.md  SERVICE_CONSUMER_GUIDE.md
src/keepcontext_ai/: __init__.py  config.py  main.py
tests/: conftest.py
tests/integration/: test_api_agents.py  test_api_ask.py  test_api_context.py  test_api_evaluation.py  test_api_graph.py  test_api_health.py  test_api_memory.py
tests/unit/: test_agent_schemas.py  test_chroma_client.py  test_config.py  test_context_manager.py  test_context_retrieval.py  test_developer.py  test_embedding_service.py  test_enriched_retrieval.py  test_entity_extractor.py  test_eval_metrics.py  test_exceptions.py  test_graph_schemas.py  test_groq_service.py  test_memory_schemas.py  test_neo4j_client.py  test_planner.py  test_prompts.py  test_quality_evaluator.py  test_reviewer.py  test_workflow.py
vscode-extension/: .vscodeignore  README.md  RELEASE_CHECKLIST.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: agentResultPanel.ts  apiClient.ts  chatParticipant.ts  commands.ts  extension.ts  memoryTreeProvider.ts  (+2 more)
(+56 files in other folders)
