    [build-system]
    requires = ["setuptools>=68.0", "wheel"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "keepcontext-ai"
    version = "0.1.0"
    description = "Persistent AI memory and orchestration platform for software development"
    readme = "README.md"
    requires-python = ">=3.10"
    dependencies = [
        "fastapi>=0.110.0",
        "uvicorn[standard]>=0.29.0",
        "pydantic>=2.0",
        "pydantic-settings>=2.0",
        "chromadb>=0.5.0",
        "openai>=1.0",
        "groq>=0.4.0",
        "httpx>=0.27.0",
        "neo4j>=5.0",
        "langgraph>=0.2.0",
        "langchain-core>=0.3.0",
        "langchain-groq>=0.2.0",
    ]

    [project.optional-dependencies]
    dev = [
        "pytest>=7.0",
        "pytest-cov>=4.0",
        "pytest-asyncio>=0.23.0",
        "black>=24.0",
        "isort>=5.0",
        "ruff>=0.3.0",
        "mypy>=1.0",
        "pre-commit>=3.0",
    ]

    [tool.black]
    line-length = 88
    target-version = ["py310"]

    [tool.isort]
    profile = "black"

    [tool.mypy]
    strict = true

    [tool.ruff]
    line-length = 88
    target-version = "py310"

    [tool.ruff.lint]
    select = ["E", "F", "I", "N", "W", "UP"]
    ignore = ["E501"]

    [tool.pytest.ini_options]
    testpaths = ["tests"]
    addopts = "-v --cov=src --cov-report=term-missing"
